create salutation in correct order